# Collapsing-Worlds

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPENDENCY_MAP.md  populate_db.py
assets/data/: agents.json  alien_generation.json  civilian_events.json  cosmic_constants.json  endgame_events.json  faction_types.json  factions_city.json  global_events.json  nemesis_actions.json  omni_powers.json  origin_paths.json  origins.json  storylets_hero.json  storylets_vigilante.json  storylets_villain.json
assets/names/: .gitattributes
assets/templates/: faction_instances.schema.json  faction_type_definitions.schema.json  storylets.schema.json
reports/: power_gene_nexa1.txt  power_tier_apex.txt
src/: lib.rs  main.rs
src/components/: combat.rs  faction.rs  identity.rs  mod.rs  persona.rs  world.rs
src/content/: mod.rs  names.rs  repository.rs  schema.rs  sqlite.rs
src/core/: ecs.rs  mod.rs  serialization.rs  world.rs
src/data/: alien_generation.rs  civilian_events.rs  cosmic_constants.rs  endgame_events.rs  factions.rs  global_events.rs  mod.rs  nemesis.rs  omni_powers.rs  storylets.rs
src/db/: load.rs  mod.rs  schema.rs
src/narrative/: identity.rs  mod.rs  nemesis.rs  storylets.rs
src/persistence/: mod.rs  repository.rs  world_db.rs
src/rules/: attributes.rs  cost.rs  expression.rs  mastery.rs  mod.rs  power.rs  signature.rs  use_power.rs
src/simulation/: agents.rs  alien.rs  case.rs  cast.rs  city.rs  civilian.rs  combat.rs  cosmic.rs  (+14 more)
tools/: __init__.py  build_name_db.py  export_content_db.py  persona_power.py  populate_db.py  refresh_signatures.py
(+20 files in other folders)
